# CMake-Tutorial

01/: CMakeLists.txt  main.cpp
libhello/: CMakeLists.txt
libhello/include/: hello.h
libhello/shared/cmake-3.10/Modules/: FindHello.cmake
libhello/src/: CMakeLists.txt  hello.cpp
source/: CMakeLists.txt
source/src/: CMakeLists.txt  main.cpp
